--- a/pyproject.toml
+++ b/pyproject.toml
@@ -366,6 +366,7 @@ commands = [
     ],
 ]
 description = "Build documentation and API through Sphinx"
+pass_env = ["*"]
 
 [tool.tox.env.doclive]
 allowlist_externals = ["sphinx-autobuild"]
@@ -401,6 +402,7 @@ commands = [
     ],
 ]
 description = "Set up a server to directly preview changes to the HTML pages"
+pass_env = ["*"]
 
 [tool.tox.env.docnb]
 base = ["tool.tox.env.doc"]
@@ -441,6 +443,7 @@ allowlist_externals = ["pre-commit"]
 base = []
 commands = [["pre-commit", "run", "--all-files", {replace = "posargs", extend = true}]]
 description = "Perform all linting, formatting, and spelling checks"
+pass_env = ["*"]
 
 [tool.tox.labels]
 doc = [
