--- a/.editorconfig
+++ b/.editorconfig
@@ -7,8 +7,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{ipynb,md}]
-indent_size = 1
+[*.{csl,qmd,md}]
+indent_size = unset
 
 [*.{py,toml}]
 indent_size = 4
