--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,10 +12,9 @@
     "ms-python.mypy-type-checker",
     "ms-python.python",
     "ms-python.vscode-pylance",
-    "ms-toolsai.jupyter",
-    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-vscode.live-server",
     "ms-vsliveshare.vsliveshare",
+    "quarto.quarto",
     "redhat.vscode-yaml",
     "ryanluker.vscode-coverage-gutters",
     "soulcode.vscode-unwanted-extensions",
@@ -32,6 +31,8 @@
     "ms-python.flake8",
     "ms-python.isort",
     "ms-python.pylint",
+    "ms-toolsai.jupyter",
+    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-toolsai.vscode-jupyter-slideshow",
     "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines"
