--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ requires = ["setuptools"]
 
 [project]
 authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
+classifiers = [
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
 dependencies = [
     "PyGithub",
     "PyYAML",
@@ -280,6 +285,7 @@ help = "Run all tests on each supported Python version"
 sequence = [
     {ref = "test-py 3.12"},
     {ref = "test-py 3.13"},
+    {ref = "test-py 3.14"},
 ]
 
 [tool.poe.tasks.test-py]
@@ -296,7 +302,7 @@ uv run \
 help = "Run all tests on a specific Python version"
 
 [[tool.poe.tasks.test-py.args]]
-default = "3.12"
+default = "3.13"
 help = "Selected Python version"
 name = "version"
 positional = true
