ENH!: build documentation with Quarto (#233)
* BREAK: export inventory as Markdown instead of HTML
* DOC: remove badges from landing page
* DOC: update CI badge
* DX: remove MyST VSCode configuration
* ENH: add aliases for redirecting
* ENH: always render notebooks, even with output
* ENH: hide redirect warning
* ENH: improve column width ratios
* FIX: remove `EXECUTE_NB` variable check
* FIX: set correct path in software inventory
* FIX: update RTD badge
* MAINT: clean up `.gitignore`
* MAINT: remove `sphinx.configuration`
* MAINT: update lock files

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,17 +5,15 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "executablebookproject.myst-highlight",
     "github.vscode-github-actions",
     "github.vscode-pull-request-github",
     "mhutchie.git-graph",
     "ms-python.mypy-type-checker",
     "ms-python.python",
     "ms-python.vscode-pylance",
-    "ms-toolsai.jupyter",
-    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-vscode.live-server",
     "ms-vsliveshare.vsliveshare",
+    "quarto.quarto",
     "redhat.vscode-yaml",
     "soulcode.vscode-unwanted-extensions",
     "stkb.rewrap",
@@ -26,11 +24,14 @@
   "unwantedRecommendations": [
     "bungcip.better-toml",
     "davidanson.vscode-markdownlint",
+    "executablebookproject.myst-highlight",
     "garaioag.garaio-vscode-unwanted-recommendations",
     "ms-python.black-formatter",
     "ms-python.flake8",
     "ms-python.isort",
     "ms-python.pylint",
+    "ms-toolsai.jupyter",
+    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-toolsai.vscode-jupyter-slideshow",
     "ryanluker.vscode-coverage-gutters",
     "travisillig.vscode-json-stable-stringify",
