--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ build:
     - |-
       export PIXI_HOME=$READTHEDOCS_VIRTUALENV_PATH
       curl -fsSL https://pixi.sh/install.sh | bash
-      pixi global install graphviz uv
+      pixi global install uv
     - |-
       export UV_LINK_MODE=copy
       uv run \
@@ -18,6 +18,3 @@ build:
         poe doc
       mkdir -p $READTHEDOCS_OUTPUT
       mv docs/_build/html $READTHEDOCS_OUTPUT
-
-sphinx:
-  configuration: docs/conf.py
