--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,10 +11,6 @@ build:
       pixi global install uv
     - |-
       export UV_LINK_MODE=copy
-      uv run \
-        --group doc \
-        --no-dev \
-        --with poethepoet \
-        poe doc
+      uvx --from poethepoet poe doc
       mkdir -p $READTHEDOCS_OUTPUT
       mv docs/_build/html $READTHEDOCS_OUTPUT
