--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     "editor.rulers": [88]
   },
   "[quarto]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "quarto.quarto"
   },
   "[snippets]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
